Atualiza a versão do Java para 25LTS